kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    labels:
        app: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
              - name: backend
                image: backend:latest
                imagePullPolicy: IfNotPresent
                ports:
                  - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
    name: backend-service
spec:
    selector:
        app: backend
    ports:
      - port: 80
        targetPort: 3001
        protocol: TCP
