kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    labels:
        app: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
              - name: frontend
                image: frontend:latest
                imagePullPolicy: IfNotPresent
                ports:
                  - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
    name: frontend-service
spec:
    selector:
        app: frontend
    type: LoadBalancer # Make it publicly accessible at the nodePort (give it an external IP address)
    ports:
      - port: 3000
        targetPort: 3000
        nodePort: 31235 # nodePort must be between 30000 & 32767
        protocol: TCP
