kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
    labels:
        app: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
              - name: postgres
                image: postgres:12.2
                ports:
                  - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
    name: postgres-service
spec:
    selector:
        app: postgres
    ports:
      - port: 5432
        targetPort: 5432
        protocol: TCP
